--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.open.learncode.rxJava.RxJava2_1">
+        <activity android:name="com.open.learncode.rxJava.RxJava2_1" />
+
+        <activity android:name="com.open.learncode.threadpoolexecutor.CachedThreadPoolActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <!--<activity android:name="com.open.learncode.MainActivity"/>-->
-        <activity android:name="com.open.learncode.handler.HandlerActivity_1" />
+
         <activity android:name="com.open.learncode.handler.HandlerActivity_2" />
         <activity android:name="com.open.learncode.handler.HandlerActivity_3" />
-        <activity android:name="com.open.learncode.handler.HandlerActivity_4"/>
-        <!--<activity android:name="com.open.learncode.rxJava.RxJava2_1"/>-->
+        <activity android:name="com.open.learncode.handler.HandlerActivity_4" />
     </application>
 
 </manifest>
