--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
-apply from: "build_ext.gradle"
+apply from: "build_libraries.gradle"
 
 buildscript {
-    ext.gradle_version = '3.5.4' // Gradle
-    ext.kotlin_version = '1.3.50' // Kotlin
+    ext.gradle_version = '4.1.3' // Gradle
+    ext.kotlin_version = "1.4.30" // Kotlin
     ext.arouter_register_version = '1.0.2' // Arouter
 
     repositories {
