--- a/app/sample-retrofit/src/main/AndroidManifest.xml
+++ b/app/sample-retrofit/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         tools:ignore="ProtectedPermissions" />
 
     <application
-        android:name="com.open.lifecycle.base.MyApplication"
+        android:name="com.open.livedata.base.MyApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
